<resources>
    <string name="app_name">Covid19 Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_image">news image</string>
    <string name="home_main_fragment">Home</string>
    <string name="main_fragment_overview">Overview</string>
    <string name="main_fragment_confirmed">Confirmed</string>
    <string name="main_fragment_zero">0</string>
    <string name="main_fragment_local_cases">Local Cases (US Only)</string>
    <string name="main_fragment_Deaths">Deaths</string>
    <string name="main_fragment_recovered">Recovered</string>
    <string name="news_search_hint">Search</string>
    <string name="news_fragment_news">News</string>
    <string name="country_fragment_country_cases">Country Cases</string>
    <string name="menu_news">News</string>
    <string name="menu_cases_by_country">Cases by Country</string>
    <string name="menu_home">Home</string>
</resources>
