<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1DA1F2"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_main_fragment"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:id="@+id/by_country_bar_graph"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:text="@string/main_fragment_overview" />

            <ProgressBar
                android:id="@+id/overview_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:indeterminate="true"
                android:progress="0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:id="@+id/overview_data"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/main_fragment_confirmed"
                        android:textColor="#000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_fragment_zero"
                        android:id="@+id/confirmed_num"
                        android:textColor="#0000FF"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/main_fragment_recovered"
                        android:textColor="#000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_fragment_zero"
                        android:id="@+id/recovered_num"
                        android:textColor="#00FF00"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/main_fragment_Deaths"
                        android:textColor="#000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_fragment_zero"
                        android:id="@+id/deaths_num"
                        android:textColor="#FF0000"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:text="@string/main_fragment_local_cases"/>

            <ProgressBar
                android:id="@+id/local_cases_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:indeterminate="true"
                android:progress="0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/error_location"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/user_local_total"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/user_local_positive"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/user_local_deaths"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/user_local_hospitalized"
                android:layout_width="wrap_content"
                android:layout_height="0dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>